--- a/src/pages/docs/gap.mdx
+++ b/src/pages/docs/gap.mdx
@@ -6,8 +6,12 @@ description: "Utilities for controlling gutters between grid rows and columns."
 import plugin from 'tailwindcss/lib/plugins/gap'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
+import { numbersFirst } from '@/utils/sortClasses'
 
-export const classes = { plugin }
+export const classes = {
+  plugin,
+  sort: numbersFirst,
+}
 
 ## Usage
 
