--- a/src/pages/docs/padding.mdx
+++ b/src/pages/docs/padding.mdx
@@ -11,8 +11,12 @@ features:
 import plugin from 'tailwindcss/lib/plugins/padding'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
+import { numbersFirstByPrefix } from '@/utils/sortClasses'
 
-export const classes = { plugin }
+export const classes = {
+  plugin,
+  sort: numbersFirstByPrefix,
+}
 
 ## Add padding to a single side
 
