--- a/src/pages/docs/space.mdx
+++ b/src/pages/docs/space.mdx
@@ -6,9 +6,11 @@ description: "Utilities for controlling the space between child elements."
 import plugin from 'tailwindcss/lib/plugins/space'
 import { Variants } from '@/components/Variants'
 import { Disabling } from '@/components/Disabling'
+import { numbersFirstByPrefix } from '@/utils/sortClasses'
 
 export const classes = {
   plugin,
+  sort: numbersFirstByPrefix,
   transformSelector: (selector) => (
     <>
       {selector.split('>').shift().trim()} <span className="ml-1 text-purple-300">> * + *</span>
