--- a/src/pages/docs/space.mdx
+++ b/src/pages/docs/space.mdx
@@ -13,7 +13,7 @@ export const classes = {
   sort: numbersFirstByPrefix,
   transformSelector: (selector) => (
     <>
-      {selector.split('>').shift().trim()} <span className="ml-1 text-purple-300">> * + *</span>
+      {selector.split('>').shift().trim().replace(/^\./, '').replace(/\\/g, '')} <span className="ml-1 text-purple-300">> * + *</span>
     </>
   ),
 }
