--- a/src/pages/docs/divide-opacity.mdx
+++ b/src/pages/docs/divide-opacity.mdx
@@ -10,7 +10,7 @@ import { Disabling } from '@/components/Disabling'
 export const classes = {
   plugin,
   transformSelector: (selector) => {
-    return selector.split('>')[0].trim()
+    return selector.split('>')[0].trim().replace(/^\./, '').replace(/\\/g, '')
   }
 }
 
