--- a/src/pages/docs/divide-width.mdx
+++ b/src/pages/docs/divide-width.mdx
@@ -11,7 +11,7 @@ export const classes = {
   plugin,
   transformSelector: (selector) => (
     <>
-      {selector.split('>').shift().trim()} <span className="ml-1 text-purple-300">> * + *</span>
+      {selector.split('>').shift().trim().replace(/^\./, '').replace(/\\/g, '')} <span className="ml-1 text-purple-300">> * + *</span>
     </>
   ),
 }
