--- a/src/pages/docs/placeholder-opacity.mdx
+++ b/src/pages/docs/placeholder-opacity.mdx
@@ -9,7 +9,7 @@ import { Disabling } from '@/components/Disabling'
 
 export const classes = {
   plugin,
-  transformSelector: (selector) => selector.split('::')[0],
+  transformSelector: (selector) => selector.split('::')[0].replace(/^\./, '').replace(/\\/g, ''),
 }
 
 ## Usage
