Update word break examples

--- a/src/pages/docs/word-break.mdx
+++ b/src/pages/docs/word-break.mdx
@@ -13,42 +13,42 @@ export const classes = { plugin }
 
 Use `break-normal` to only add line breaks at normal word break points.
 
-```html
+```html lightBlue
 <template preview>
-  <p class="break-normal max-w-xs p-2 bg-gray-200 mx-auto">
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
+  <p class="break-normal max-w-xs p-4 mx-auto bg-light-blue-200 rounded-md shadow-inner">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
   </p>
 </template>
 
-<p class="break-normal ...">...</p>
+<p class="**break-normal** ...">...</p>
 ```
 
 ## Break Words
 
 Use `break-words` to add line breaks mid-word if needed.
 
-```html
+```html amber
 <template preview>
-  <p class="break-words max-w-xs p-2 bg-gray-200 mx-auto">
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
+  <p class="break-words max-w-xs p-4 mx-auto bg-amber-200 rounded-md shadow-inner">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
   </p>
 </template>
 
-<p class="break-words ...">...</p>
+<p class="**break-words** ...">...</p>
 ```
 
 ## Break All
 
 Use `break-all` to add line breaks whenever necessary, without trying to preserve whole words.
 
-```html
+```html emerald
 <template preview>
-  <p class="break-all max-w-xs p-2 bg-gray-200 mx-auto">
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
+  <p class="break-all max-w-xs p-4 mx-auto bg-emerald-200 rounded-md shadow-inner">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiisitaquequodpraesentiumexplicaboincidunt? Dolores beatae nam at sed dolorum ratione dolorem nisi velit cum.
   </p>
 </template>
 
-<p class="break-all ...">...</p>
+<p class="**break-all** ...">...</p>
 ```
 
 ## Responsive
