Update appearance example

--- a/src/pages/docs/appearance.mdx
+++ b/src/pages/docs/appearance.mdx
@@ -16,10 +16,10 @@ export const classes = { plugin }
 
 ## Usage
 
-Use `appearance-none` to reset any browser specific styling on an element. This utility is often used when creating [custom Form components](/docs/examples/forms).
+Use `appearance-none` to reset any browser specific styling on an element. This utility is often used when creating [custom form components](/docs/examples/forms).
 
-```html
-<template preview class="text-center p-4">
+```html indigo
+<template preview>
   <div class="max-w-sm mx-auto">
     <div class="flex my-4">
       <select class="w-16">
