Update cursor examples

--- a/src/pages/docs/cursor.mdx
+++ b/src/pages/docs/cursor.mdx
@@ -18,14 +18,14 @@ export const classes = { plugin }
 
 Use `cursor-auto` to allow the browser to change the cursor based on the current content (e.g. automatically change to `text` cursor when hovering over text).
 
-```html
-<template preview class="text-center p-4">
-  <div class="cursor-auto max-w-xs p-2 bg-gray-200 mx-auto">
+```html rose
+<template preview>
+  <div class="cursor-auto max-w-xs p-2 bg-rose-200 mx-auto text-center">
     Hover over this text
   </div>
 </template>
 
-<div class="cursor-auto ...">
+<div class="**cursor-auto** ...">
   Hover over this text
 </div>
 ```
@@ -34,14 +34,14 @@ Use `cursor-auto` to allow the browser to change the cursor based on the current
 
 Use `cursor-default` to change the mouse cursor to always use the platform-dependent default cursor (usually an arrow).
 
-```html
-<template preview class="text-center p-4">
-  <div class="cursor-default max-w-xs p-2 bg-gray-200 mx-auto">
+```html amber
+<template preview>
+  <div class="cursor-default max-w-xs p-2 bg-amber-200 mx-auto text-center">
     Hover over this text
   </div>
 </template>
 
-<div class="cursor-default ...">
+<div class="**cursor-default** ...">
   Hover over this text
 </div>
 ```
@@ -50,14 +50,14 @@ Use `cursor-default` to change the mouse cursor to always use the platform-depen
 
 Use `cursor-pointer` to change the mouse cursor to indicate an interactive element (usually a pointing hand).
 
-```html
-<template preview class="text-center p-4">
-  <div class="cursor-pointer max-w-xs p-2 bg-gray-200 mx-auto">
+```html purple
+<template preview>
+  <div class="cursor-pointer max-w-xs p-2 bg-purple-200 mx-auto text-center">
     Hover me
   </div>
 </template>
 
-<div class="cursor-pointer ...">
+<div class="**cursor-pointer** ...">
   Hover me
 </div>
 ```
@@ -66,14 +66,14 @@ Use `cursor-pointer` to change the mouse cursor to indicate an interactive eleme
 
 Use `cursor-wait` to change the mouse cursor to indicate something is happening in the background (usually an hourglass or watch).
 
-```html
-<template preview class="text-center p-4">
-  <div class="cursor-wait max-w-xs p-2 bg-gray-200 mx-auto">
+```html emerald
+<template preview>
+  <div class="cursor-wait max-w-xs p-2 bg-emerald-200 mx-auto text-center">
     Hover me
   </div>
 </template>
 
-<div class="cursor-wait ...">
+<div class="**cursor-wait** ...">
   Hover me
 </div>
 ```
@@ -82,9 +82,9 @@ Use `cursor-wait` to change the mouse cursor to indicate something is happening 
 
 Use `cursor-text` to change the mouse cursor to indicate the text can be selected (usually an I-beam shape).
 
-```html
-<template preview class="text-center p-4">
-  <div class="cursor-text max-w-xs p-2 bg-gray-200 mx-auto">
+```html fuchsia
+<template preview>
+  <div class="cursor-text max-w-xs p-2 bg-fuchsia-200 mx-auto text-center">
     Hover me
   </div>
 </template>
@@ -98,14 +98,14 @@ Use `cursor-text` to change the mouse cursor to indicate the text can be selecte
 
 Use `cursor-move` to change the mouse cursor to indicate something that can be moved.
 
-```html
-<template preview class="text-center p-4">
-  <div class="cursor-move max-w-xs p-2 bg-gray-200 mx-auto">
+```html indigo
+<template preview>
+  <div class="cursor-move max-w-xs p-2 bg-indigo-200 mx-auto text-center">
     Hover me
   </div>
 </template>
 
-<div class="cursor-move ...">
+<div class="**cursor-move** ...">
   Hover me
 </div>
 ```
@@ -114,14 +114,14 @@ Use `cursor-move` to change the mouse cursor to indicate something that can be m
 
 Use `cursor-not-allowed` to change the mouse cursor to indicate something can not be interacted with or clicked.
 
-```html
-<template preview class="text-center p-4">
-  <div class="cursor-not-allowed max-w-xs p-2 bg-gray-200 mx-auto">
+```html lightBlue
+<template preview>
+  <div class="cursor-not-allowed max-w-xs p-2 bg-light-blue-200 mx-auto text-center">
     Hover me
   </div>
 </template>
 
-<div class="cursor-not-allowed ...">
+<div class="**cursor-not-allowed** ...">
   Hover me
 </div>
 ```
