Fix color name on box-sizing

--- a/src/pages/docs/box-sizing.mdx
+++ b/src/pages/docs/box-sizing.mdx
@@ -46,8 +46,8 @@ This means a 100px &times; 100px element with a 2px border and 4px of padding on
   </div>
 </template>
 
-<div class="**box-content** h-32 w-32 p-4 border-4 border-emerald-400 bg-emerald-200 ...">
-  <div class="h-full w-full bg-emerald-400 ..."></div>
+<div class="**box-content** h-32 w-32 p-4 border-4 border-green-400 bg-green-200 ...">
+  <div class="h-full w-full bg-green-400 ..."></div>
 </div>
 ```
 
