Fixed code example on box sizing

--- a/src/pages/docs/box-sizing.mdx
+++ b/src/pages/docs/box-sizing.mdx
@@ -26,8 +26,8 @@ Tailwind makes this the default for all elements in our [preflight base styles](
   </div>
 </template>
 
-<div class="**box-border** h-32 w-32 p-4 border-4 border-light-blue-400 bg-light-blue-200 ...">
-  <div class="h-full w-full ..."></div>
+<div class="**box-border** h-32 w-32 p-4 border-4 ...">
+  <!-- ... -->
 </div>
 ```
 
@@ -46,8 +46,8 @@ This means a 100px &times; 100px element with a 2px border and 4px of padding on
   </div>
 </template>
 
-<div class="**box-content** h-32 w-32 p-4 border-4 border-green-400 bg-green-200 ...">
-  <div class="h-full w-full bg-green-400 ..."></div>
+<div class="**box-content** h-32 w-32 p-4 border-4 ...">
+  <!-- ... -->
 </div>
 ```
 
