fix syntax in code example

--- a/src/pages/docs/extracting-components.mdx
+++ b/src/pages/docs/extracting-components.mdx
@@ -192,7 +192,7 @@ module.exports = {
           borderRadius: theme('borderRadius.md'),
           fontWeight: theme('fontWeight.600'),
         },
-        '.btn-indigo {
+        '.btn-indigo': {
           backgroundColor: theme('colors.indigo.500'),
           color: theme('colors.white'),
           '&:hover': {
