--- a/src/pages/docs/top-right-bottom-left.mdx
+++ b/src/pages/docs/top-right-bottom-left.mdx
@@ -19,7 +19,7 @@ Use the `{top|right|bottom|left|inset}-0` utilities to anchor absolutely positio
 
 Combined with Tailwind's padding and margin utilities, you'll probably find that these are all you need to precisely control absolutely positioned elements.
 
-```html
+```html emerald
 <template preview>
   <div class="grid grid-cols-2 gap-4 sm:grid-cols-3 md:grid-cols-4">
     <div class="relative p-2 h-32 w-32 bg-emerald-300 bg-stripes bg-stripes-white rounded-md">
