--- a/src/pages/docs/vertical-align.mdx
+++ b/src/pages/docs/vertical-align.mdx
@@ -19,108 +19,108 @@ export const classes = { plugin }
 
 Use `align-baseline` to align the baseline of an element with the baseline of its parent.
 
-```html
+```html lightBlue
 <template preview>
   <div class="leading-none relative">
-    <span class="w-1 h-8 inline-block align-baseline bg-blue-300">
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-8"></span>
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-4"></span>
+    <span class="w-0 h-8 inline-block align-baseline">
+      <span class="absolute top-0 border-light-blue-300 border-t border-b border-dashed w-full h-8"></span>
+      <span class="absolute top-0 border-light-blue-300 border-t border-b border-dashed w-full h-4"></span>
     </span>
-    <span class="relative z-10">.align-baseline</span>
+    <span class="relative z-10">The quick brown fox jumped over the lazy dog.</span>
   </div>
 </template>
 
-<span class="inline-block align-baseline ...">...</span>
+<span class="inline-block **align-baseline** ...">...</span>
 ```
 
 ## Top
 
 Use `align-top` to align the top of an element and its descendants with the top of the entire line.
 
-```html
+```html emerald
 <template preview>
   <div class="leading-none relative">
-    <span class="w-1 h-8 inline-block align-top bg-blue-300">
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-8"></span>
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-4"></span>
+    <span class="w-0 h-8 inline-block align-top">
+      <span class="absolute top-0 border-emerald-300 border-t border-b border-dashed w-full h-8"></span>
+      <span class="absolute top-0 border-emerald-300 border-t border-b border-dashed w-full h-4"></span>
     </span>
-    <span class="relative z-10">.align-top</span>
+    <span class="relative z-10">The quick brown fox jumped over the lazy dog.</span>
   </div>
 </template>
 
-<span class="inline-block align-top ...">...</span>
+<span class="inline-block **align-top** ...">...</span>
 ```
 
 ## Middle
 
 Use `align-middle` to align the middle of an element with the baseline plus half the x-height of the parent.
 
-```html
+```html purple
 <template preview>
   <div class="leading-none relative">
-    <span class="w-1 h-8 inline-block align-middle bg-blue-300">
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-8"></span>
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-4"></span>
+    <span class="w-0 h-8 inline-block align-middle">
+      <span class="absolute top-0 border-purple-300 border-t border-b border-dashed w-full h-8"></span>
+      <span class="absolute top-0 border-purple-300 border-t border-b border-dashed w-full h-4"></span>
     </span>
-    <span class="relative z-10">.align-middle</span>
+    <span class="relative z-10">The quick brown fox jumped over the lazy dog.</span>
   </div>
 </template>
 
-<span class="inline-block align-middle ...">...</span>
+<span class="inline-block **align-middle** ...">...</span>
 ```
 
 ## Bottom
 
 Use `align-bottom` to align the bottom of an element and its descendants with the bottom of the entire line.
 
-```html
+```html rose
 <template preview>
   <div class="leading-none relative">
-    <span class="w-1 h-8 inline-block align-bottom bg-blue-300">
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-8"></span>
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-4"></span>
+    <span class="w-0 h-8 inline-block align-bottom">
+      <span class="absolute top-0 border-rose-300 border-t border-b border-dashed w-full h-8"></span>
+      <span class="absolute top-0 border-rose-300 border-t border-b border-dashed w-full h-4"></span>
     </span>
-    <span class="relative z-10">.align-bottom</span>
+    <span class="relative z-10">The quick brown fox jumped over the lazy dog.</span>
   </div>
 </template>
 
-<span class="inline-block align-bottom ...">...</span>
+<span class="inline-block **align-bottom** ...">...</span>
 ```
 
 ## Text Top
 
 Use `align-text-top` to align the top of an element with the top of the parent element's font.
 
-```html
+```html amber
 <template preview>
   <div class="leading-none relative">
-    <span class="w-1 h-8 inline-block align-text-top bg-blue-300">
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-8"></span>
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-4"></span>
+    <span class="w-0 h-8 inline-block align-text-top">
+      <span class="absolute top-0 border-amber-300 border-t border-b border-dashed w-full h-8"></span>
+      <span class="absolute top-0 border-amber-300 border-t border-b border-dashed w-full h-4"></span>
     </span>
-    <span class="relative z-10">.align-text-top</span>
+    <span class="relative z-10">The quick brown fox jumped over the lazy dog.</span>
   </div>
 </template>
 
-<span class="inline-block align-text-top ...">...</span>
+<span class="inline-block **align-text-top** ...">...</span>
 ```
 
 ## Text Bottom
 
 Use `align-text-bottom` to align the bottom of an element with the bottom of the parent element's font.
 
-```html
+```html fuchsia
 <template preview>
   <div class="leading-none relative">
-    <span class="w-1 h-8 inline-block align-text-bottom bg-blue-300">
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-8"></span>
-      <span class="absolute top-0 border-blue-300 border-t border-b w-full h-4"></span>
+    <span class="w-0 h-8 inline-block align-text-bottom">
+      <span class="absolute top-0 border-fuchsia-300 border-t border-b border-dashed w-full h-8"></span>
+      <span class="absolute top-0 border-fuchsia-300 border-t border-b border-dashed w-full h-4"></span>
     </span>
-    <span class="relative z-10">.align-text-bottom</span>
+    <span class="relative z-10">The quick brown fox jumped over the lazy dog.</span>
   </div>
 </template>
 
-<span class="inline-block align-text-bottom ...">...</span>
+<span class="inline-block **align-text-bottom** ...">...</span>
 ```
 
 ## Responsive
