--- a/src/pages/docs/gradient-color-stops.mdx
+++ b/src/pages/docs/gradient-color-stops.mdx
@@ -16,7 +16,7 @@ import { Disabling } from '@/components/Disabling'
 export const classes = {
   plugin,
   transformProperties: ({ selector, properties }) => {
-    delete properties['--gradient-color-stops']
+    delete properties['--tw-gradient-color-stops']
     return properties
   },
   preview: (css) => (
@@ -24,9 +24,9 @@ export const classes = {
       className={`w-24 ${css['background-color'] === 'transparent' ? 'bg-checkered' : ''}`}
       style={{
         backgroundColor: ([
-          css['--gradient-from-color'],
-          css['--gradient-via-color'],
-          css['--gradient-to-color']
+          css['--tw-gradient-from'],
+          css['--tw-gradient-via'],
+          css['--tw-gradient-to']
         ]).filter(c => c !== undefined)[0],
       }}
     />
