--- a/src/pages/docs/ring-color.mdx
+++ b/src/pages/docs/ring-color.mdx
@@ -10,7 +10,7 @@ import { Disabling } from '@/components/Disabling'
 export const classes = {
   plugin,
   transformProperties: ({ selector, properties }) => {
-    delete properties['--ring-opacity']
+    delete properties['--tw-ring-opacity']
     return properties
   }
 }
